[tool.poetry]
name = "pylode"
version = "3.2.4a"
description = "An OWL ontology documentation tool using Python, based on LODE."
authors = ["Nicholas Car <nick@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = ">=7.0.0,<8.0.0"
Markdown = "^3.3.7"
dominate = "^2.6.0"
html5lib = "^1.1"
httpx = ">=0.25.0,<1.0.0"

[tool.poetry.scripts]
pylode = "pylode.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^24.3.0"
flake8 = "^4.0.1"
pyinstaller = { version = "^6.0", python = ">=3.9,<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
ruff = "0.14.3"
