[project]
name = "pylode"
version = "3.2.4a"
description = "An OWL ontology documentation tool using Python, based on LODE."
authors = [{ name = "Nicholas Car", email = "nick@kurrawong.ai" }]
requires-python = ">=3.9,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rdflib>=7.0.0,<8.0.0",
    "Markdown>=3.3.7,<4",
    "dominate>=2.6.0,<3",
    "html5lib>=1.1,<2",
    "httpx>=0.25.0,<1.0.0",
]

[project.scripts]
pylode = "pylode.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "black>=24.3.0,<25",
    "flake8>=4.0.1,<5",
    "pyinstaller>=6.0,<7 ; python_full_version >= '3.9' and python_full_version < '3.11'",
]
lint = ["ruff==0.14.3"]

[tool.uv]
required-version = ">=0.7.9"
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
